style(landing): fix overflow wrapping in tile captions

--- a/src/components/Landing/landing.module.less
+++ b/src/components/Landing/landing.module.less
@@ -81,6 +81,7 @@
           bottom: 88px;
           width: 100%;
           text-align: center;
+          overflow-wrap: normal;
         }
       }
     }
